add project in json

--- a/public/project.json
+++ b/public/project.json
@@ -1,9 +1,22 @@
 {
-    "projects":{
-        "Nome": "Apple",
-        "Img": "Large",
-        "Descrizione": "Red",
-        "Tecnologie":"",
-        "Link":""
-    }
+    "projects":
+    [
+        {
+        
+            "Nome": "Apple",
+            "Img": "Large",
+            "Descrizione": "Red",
+            "Tecnologie":"",
+            "Link":"https://vue-boolzapp-iota.vercel.app/"
+        },
+        {
+        
+            "Nome": "Apple",
+            "Img": "Large",
+            "Descrizione": "Red",
+            "Tecnologie":"",
+            "Link":"https://vue-todolist-gilt.vercel.app/"
+        }
+    ]
+    
 }
