--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "vue": "^3.3.11",
