--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "aos": "^2.3.4",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "gsap": "^3.12.5",
+    "three": "^0.167.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
